<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="spa">www.suizid-app.ch</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="transfer">Transfer</string>
    <string name="end_chat">End Chat</string>
    <string name="supporter_login">Supporter Login</string>
    <string name="github">Project on <a href="https://github.com/braindef/SuicidePreventionApp">Github</a></string>
    <string name="website"><a href="http://www.suizid-app.ch">www.suizid-app.ch</a></string>
    <string name="positive_button">Ja</string>
    <string name="negative_button">Nein</string>
    <string name="getting_help">Hilfe bekommen</string>
    <string name="Need_Help">Brauche Hilfe</string>
    <string name="abuse">bitte diese App nicht missbrauchen</string>
    <string name="searching_supporter">Suche Supporter...</string>  
    <string name="please_wait">bitte warten...</string>  
    <string name="sure_to_contact_supporter">Bist Du sicher dass Du einen Supporter rufen willst?</string>  
    <string name="logindata">Du bekommst ein Login auf der Webseite, wenn Du dich einloggst registriert sich Dein Telefon und du erhälst Anrufe von Hilfesuchenden, Ihr könnt über die App dann natürlich auch z.B. Telefonnummer, Facebook Kontakt usw. tauschen</string>
    <string name="please_enter_logindata">Bitte Login und Passwort angeben</string>
    <string name="end_chat_message">Wirklich zum Hauptbildschirm wechseln?</string>
    <string name="EvaluateSupporter">Supporter bewerten</string>
    <string name="please_rate">Bitte bewerte den Supporter</string>
    <string name="saved_live">Hat mein Leben gerettet</string>
    <string name="helped">Hat mir geholfen</string>
    <string name="made_worse">Hat es verschlimmert</string>

    
</resources>