<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sha.MainActivity" >

    <item
        android:id="@+id/supporter_login"
        android:orderInCategory="100"
        android:title="@string/supporter_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_available"
        android:checkable="true"
        android:checked="true"
        android:title="Available"
        android:titleCondensed="Available"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_transfer"
        android:orderInCategory="100"
        android:title="@string/transfer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/end_chat"
        android:orderInCategory="100"
        android:title="@string/end_chat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"/>

</menu>