<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sha.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_getting_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/getting_help"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/polar_bear_help" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/needHelp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingRight="26dip"
                android:text="@string/Need_Help"
                android:background="#7777ff"  
                />



        </LinearLayout>

        <TextView
            android:id="@+id/abuse"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_gravity="center"
            android:layout_marginTop="17dp"
            android:text="@string/abuse" />
    </LinearLayout>

</LinearLayout>